--- a/README
+++ b/README
@@ -2,11 +2,10 @@ Just a place to store my emacs configuration.
 
 Prerequisites for a fresh install:
 
-* Hack font
+* Consolas font (yes, can be installed in Linux too)
 * Unless I make some changes to the way the settings are configured (all via customize/none via customize), there's a chance I need to launch Emacs twice
 
 Config notes:
-* Whitespace mode made everything too slow under Windows, so it's commented out.
-* Default fullscreen frames are great. But they always open in the main monitor, so also commented that setting. Win+Arrow and then <f-11> it is.
-* Moving computer-specific configuration to an external script. More tidy, but I kind of like having everything in a single place.
 * Need to work on the RPI stuff
+* The monitor switch bound to Win+P in the i3 config is tied to my specific needs to my current laptop, it is not generic.
+* .xmodmap changes are the result of a broken trackpad, wouldn't need context menu if I had a right click :) 
